[package]
name = "gh-web-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.17"
scraper = "0.16.0"
tokio = {version = "1.28.1", features = ["full"]}
linkify = "0.9.0"
prettytable-rs = "^0.10"